# investing-analyst-v3

./: .env.example  .gitignore  Makefile  README.md
agent/: pyproject.toml
agent/src/iav3/: __init__.py  cli.py  config.py  engine.py  portfolio.py
agent/src/iav3/advisor/: __init__.py  claude_advisor.py
agent/src/iav3/backtest/: __init__.py  engine.py  metrics.py  walk_forward.py
agent/src/iav3/broker/: __init__.py  alpaca.py  base.py  paper.py
agent/src/iav3/dashboard/: __init__.py  app.py  data.py
agent/src/iav3/data/: __init__.py  alpaca_options.py  base.py  finnhub_feed.py  indicators.py  scanner.py  universe.py  yfinance_feed.py
agent/src/iav3/db/: __init__.py  neon.py
agent/src/iav3/greeks/: __init__.py  aggregator.py
agent/src/iav3/options/: __init__.py  black_scholes.py  long_call_overlay.py  wheel.py  wheel_live.py
agent/src/iav3/risk/: __init__.py  cvar.py  manager.py
agent/src/iav3/strategy/: __init__.py  base.py  mean_reversion.py  momentum.py  vol_target_trend.py  vol_target_trend_aggressive.py
agent/tests/: test_alpaca_options.py  test_backtest_engine.py  test_black_scholes.py  test_cvar.py  test_dashboard_data.py  test_greeks_aggregator.py  test_indicators.py  test_long_call_overlay.py  test_risk_manager.py  test_scanner.py  test_strategies.py  test_submit_option_order.py  test_vol_target_trend.py  test_walk_forward.py  test_wheel.py  test_wheel_live.py
dashboard/: .env.example  README.md  middleware.ts  next.config.ts  package.json  tsconfig.json
docs/: runbook-3-day-cadence.md  sow-template.html  whitepaper.html  (+1 more)
(+26 files in other folders)
