[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iav3"
version = "0.1.0"
description = "Risk-disciplined, backtest-first trading agent with real options data"
authors = [{name = "Hans Seraphim"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.30",
    "finnhub-python>=2.4",
    "anthropic>=0.40",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary,pool]>=3.2",
    "exchange-calendars>=4.5",
    "pandas-market-calendars>=4.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]
dashboard = [
    "streamlit>=1.36",
    "plotly>=5.20",
]

[project.scripts]
iav3 = "iav3.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]
ignore = ["E501"]
